2014-09-23  Joseph Pecoraro  <pecoraro@apple.com>

        Web Inspector: Should be able to attach a debugger to a JSContext before anything is executed
        https://bugs.webkit.org/show_bug.cgi?id=136893

        Reviewed by Timothy Hatcher.

        Adds new remote inspector protocol handling for automatic inspection.
        Debuggers can signal they have enabled automatic inspection, and
        when debuggables are created the current application will pause to
        see if the debugger will inspect or decline to inspect the debuggable.

        * inspector/remote/RemoteInspectorConstants.h:
        * inspector/remote/RemoteInspector.h:
        * inspector/remote/RemoteInspector.mm:
        (Inspector::globalAutomaticInspectionState):
        (Inspector::RemoteInspector::RemoteInspector):
        (Inspector::RemoteInspector::start):
        When first starting, check the global "is there an auto-inspect" debugger state.
        This is necessary so that the current application knows if it should pause or
        not when a debuggable is created, even without having connected to webinspectord yet.

        (Inspector::RemoteInspector::updateDebuggableAutomaticInspectCandidate):
        When a debuggable has enabled remote inspection, take this path to propose
        it as an automatic inspection candidate if there is an auto-inspect debugger.

        (Inspector::RemoteInspector::sendAutomaticInspectionCandidateMessage):
        Send the automatic inspection candidate message.

        (Inspector::RemoteInspector::receivedSetupMessage):
        (Inspector::RemoteInspector::setupFailed):
        (Inspector::RemoteInspector::setupSucceeded):
        After attempting to open an inspector, unpause if it was for the
        automatic inspection candidate.

        (Inspector::RemoteInspector::waitingForAutomaticInspection):
        When running a nested runloop, check if we should remain paused.

        (Inspector::RemoteInspector::setupXPCConnectionIfNeeded):